RESOLVED FIXED 134296
feBlend should support all blend modes from CSS and Canvas
https://bugs.webkit.org/show_bug.cgi?id=134296
Summary feBlend should support all blend modes from CSS and Canvas
Dirk Schulze
Reported 2014-06-25 05:22:17 PDT
feBlend should support all blend modes from CSS and Canvas
Attachments
Patch (135.35 KB, patch)
2014-06-25 05:38 PDT, Dirk Schulze
no flags
Patch (135.34 KB, patch)
2014-06-25 06:58 PDT, Dirk Schulze
no flags
Patch- next try (135.31 KB, patch)
2014-06-25 07:09 PDT, Dirk Schulze
no flags
Patch- next try (134.84 KB, patch)
2014-06-25 07:11 PDT, Dirk Schulze
no flags
Patch (139.26 KB, patch)
2014-06-25 08:21 PDT, Dirk Schulze
no flags
Patch (138.78 KB, patch)
2014-06-25 08:39 PDT, Dirk Schulze
no flags
Dirk Schulze
Comment 1 2014-06-25 05:38:27 PDT
Dirk Schulze
Comment 2 2014-06-25 06:58:57 PDT
Dirk Schulze
Comment 3 2014-06-25 07:03:25 PDT
Hmpf... it would be great to know what the problem is... there is no indicator at all in the log.
Dirk Schulze
Comment 4 2014-06-25 07:09:08 PDT
Created attachment 233809 [details] Patch- next try
Dirk Schulze
Comment 5 2014-06-25 07:11:51 PDT
Created attachment 233810 [details] Patch- next try
WebKit Commit Bot
Comment 6 2014-06-25 07:12:44 PDT
Attachment 233810 [details] did not pass style-queue: ERROR: Source/WebCore/platform/graphics/cpu/arm/filters/FEBlendNEON.h:129: Multi line control clauses should use braces. [whitespace/braces] [4] Total errors found: 1 in 18 files If any of these errors are false positives, please file a bug against check-webkit-style.
Dirk Schulze
Comment 7 2014-06-25 08:21:26 PDT
Dirk Schulze
Comment 8 2014-06-25 08:39:00 PDT
WebKit Commit Bot
Comment 9 2014-06-25 12:04:12 PDT
Comment on attachment 233814 [details] Patch Clearing flags on attachment: 233814 Committed r170433: <http://trac.webkit.org/changeset/170433>
WebKit Commit Bot
Comment 10 2014-06-25 12:04:17 PDT
All reviewed patches have been landed. Closing bug.
Note You need to log in before you can comment on or make changes to this bug.