Source/WebCore/svg/SVGFEBlendElement.cpp
@@ -1,6 +1,7 @@
 /*
  * Copyright (C) 2004, 2005, 2007 Nikolas Zimmermann <zimmermann@kde.org>
  * Copyright (C) 2004, 2005, 2006 Rob Buis <buis@kde.org>
+ * Copyright (C) 2014 Adobe Systems Incorporated. All rights reserved.
  *
  * This library is free software; you can redistribute it and/or
  * modify it under the terms of the GNU Library General Public
@@ -35,7 +36,7 @@ namespace WebCore {
 // Animated property definitions
 DEFINE_ANIMATED_STRING(SVGFEBlendElement, SVGNames::inAttr, In1, in1)
 DEFINE_ANIMATED_STRING(SVGFEBlendElement, SVGNames::in2Attr, In2, in2)
-DEFINE_ANIMATED_ENUMERATION(SVGFEBlendElement, SVGNames::modeAttr, Mode, mode, BlendModeType)
+DEFINE_ANIMATED_ENUMERATION(SVGFEBlendElement, SVGNames::modeAttr, Mode, mode, BlendMode)
 
 BEGIN_REGISTER_ANIMATED_PROPERTIES(SVGFEBlendElement)
     REGISTER_LOCAL_ANIMATED_PROPERTY(in1)
@@ -46,7 +47,7 @@ END_REGISTER_ANIMATED_PROPERTIES
 
 inline SVGFEBlendElement::SVGFEBlendElement(const QualifiedName& tagName, Document& document)
     : SVGFilterPrimitiveStandardAttributes(tagName, document)
-    , m_mode(FEBLEND_MODE_NORMAL)
+    , m_mode(BlendModeNormal)
 {
     ASSERT(hasTagName(SVGNames::feBlendTag));
     registerAnimatedPropertiesForSVGFEBlendElement();
@@ -76,9 +77,9 @@ void SVGFEBlendElement::parseAttribute(const QualifiedName& name, const AtomicSt
     }
 
     if (name == SVGNames::modeAttr) {
-        BlendModeType propertyValue = SVGPropertyTraits<BlendModeType>::fromString(value);
-        if (propertyValue > 0)
-            setModeBaseValue(propertyValue);
+        BlendMode mode = BlendModeNormal;
+        if (parseBlendMode(value, mode))
+            setModeBaseValue(mode);
         return;
     }
 
